--- a/.prettierrc
+++ b/.prettierrc
@@ -1,4 +1,8 @@
 {
   "singleQuote": true,
-  "trailingComma": "all"
+  "semi": true,
+  "printWidth": 80,
+  "arrowParens": "avoid",
+  "trailingComma": "all",
+  "bracketSpacing": true
 }
