feat: UPDATE AuthModule IN auth/ build: npm i @nestjs/jwt jsonwebtoken build: npm i @nestjs/passport passport passport-jwt build: npm i -D @types/passport-jwt build: npm i @nestjs/cache-manager cache-manager feat: UPDATE UserEntity IN routes/user/entities/ feat: UPDATE AuthService IN auth/ feat: CREATE JwtStrategy IN auth/strategies/
-- CREATE JwtPayloadModel IN auth/models/
-- CREATE AuthExceptions IN auth/classes/auth.exceptions.ts
-- CREATE RequiredTypeUtilitaries IN shared/types/utils/required.types.ts
-- CREATE PrettifyTypeUtilitary IN shared/types/utils/prettify.type.ts

--- a/.env.example
+++ b/.env.example
@@ -11,3 +11,6 @@
 # one found in a remote Prisma Postgres URL, does not contain any sensitive information.
 
 DATABASE_URL="postgresql://USER:PASSWORD@HOST:PORT/DATABASE?schema=public"
+
+# JWT Environments
+JWT_SECRET=
