--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "@prisma/adapter-pg": "^7.1.0",
     "@prisma/client": "^7.1.0",
     "cache-manager": "^7.2.7",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.3",
     "jsonwebtoken": "^9.0.3",
     "morgan": "^1.10.1",
     "passport": "^0.7.0",
